welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:10: error: not enough arguments for method marquersol: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	marquersol()
                  ^PatternPicture:14: error: not enough arguments for method marquersol: (c: java.awt.Color)Unit.
Unspecified value parameter c.
	marquersol()
                  ^