welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
def marquersol(c:Color) ={
	setCouleurBrosse(c)
	baisseBrosse()
	leveBrosse()
}
def faireL(c:Color) ={
	avance()
	marquersol()
	recule()
	gauche()
	avance()
	marquersol()
	recule()
	droite()
	avance(3)
	gauche()
}
def faireMotif() ={
	faireL(Color.RED)
	faireL(Color.BLUE)
	faireL(Color.GREEN)
	faireL(Color.YELLOW)
}
faireMotif()
avance(4)
faireMotif()
recule(4)
gauche()
avance(4)
droite()
faireMotif()
avance(4)
faireMotif()
}
